--- a/CUDA_Barrier_Synchronization/CUDA_Barrier_Synchronization.vcxproj
+++ b/CUDA_Barrier_Synchronization/CUDA_Barrier_Synchronization.vcxproj
@@ -78,7 +78,9 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CudaCompile Include="kernel.cu" />
+    <CudaCompile Include="synch_ex.cu">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </CudaCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\util_cu\util_cuda.cuh" />
