--- a/CUDA_Texture_memory/CUDA_Texture_memory.vcxproj
+++ b/CUDA_Texture_memory/CUDA_Texture_memory.vcxproj
@@ -79,7 +79,9 @@
     </CudaCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <CudaCompile Include="kernel.cu" />
+    <CudaCompile Include="tex1Dfetch.cu">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
+    </CudaCompile>
     <CudaCompile Include="TexMem_2D_Arrays.cu" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
